--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class="container-loader">
+        <div class="container-loader" id="loader">
             <div class="loader"><span></span></div>
             <div class="loader"><span></span></div>
             <div class="loader"><i></i></div>
